--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 script:
-- xctool -project "CPPAtomic.xcodeproj" -scheme "CPPAtomic-Tests" test
+- xctool -project "CPPTraits.xcodeproj" -scheme "CPPTraits-Tests" test
 before_install:
 - bash Scripts/travis-before.sh
 after_success:
